[package]
name = "cch23-secret-santa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
base64 = "0.21.5"
nom = "7.1.3"
rustemon = "3.2.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.34.1"
shuttle-runtime = "0.34.1"
tokio = "1.35.0"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
